# standbyrsd

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
icons/: standbyrsd-icon.icns
locales/az/: main.ftl
locales/de/: main.ftl
locales/en/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
locales/ja/: main.ftl
locales/ka/: main.ftl
locales/kk/: main.ftl
locales/ru/: main.ftl
locales/tr/: main.ftl
locales/zh/: main.ftl
src/: main.rs
