[package]
name = "standbyrsd"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "smol", "advanced", "tokio", "svg", "image"] }
iced_anim = "*"
chrono = "*"
serde = {version = "*", features = ["derive"]}
reqwest = {version = "*", features = ["json"]}
tokio = { version = "1", features = ["rt-multi-thread"] }
geolocation = "*"
image = "0.25.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "*", features = ["Win32_UI_Input_KeyboardAndMouse", "Media_Control", "Foundation", "Storage_Streams"]}

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0.1"
reqwest = {version = "*", features = ["blocking"]}

[target.'cfg(target_os = "macos")'.dependencies]
media-remote = {path = "media-remote"}
