[package]
name = "standbyrsd"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "smol", "advanced", "tokio", "svg", "image"] }
iced_anim = "0.3.1"
chrono = "0.4.44"
serde = {version = "1.0.228", features = ["derive"]}
reqwest = {version = "0.13.2", features = ["json"]}
tokio = { version = "1", features = ["rt-multi-thread"] }
geolocation = "0.2.1"
image = "0.25.10"
volumecontrol = "0.1"
spa = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse", "Media_Control", "Foundation", "Storage_Streams", "Win32_Media_Audio", "Win32_System_Com", "Win32_Devices_Properties", "Win32_Media_Audio_Endpoints", "Win32_System_Com_StructuredStorage", "Win32_System_Ole"]}

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.0.1"
reqwest = {version = "0.13.2", features = ["blocking"]}

[target.'cfg(target_os = "macos")'.dependencies]
media-remote = {path = "media-remote"}
